
        class Person
          include MongoMapper::Document
          self.static_keys = true
        end

        p = Person.new
        p['non_defined_key'] = 'foo' # => MissingKeyError

      [smtlaissezfaire]

    * Add after_find, after_initialize callbacks [smtlaissezfaire]

  Bug Fixes

    * Fix counter caching with polymorphic belongs_to [smtlaissezfaire, bhernez]

  Internals:

    * Don't create accessors for reserved keys (id, class, etc) [cheald]
    * Disallow class as a key name [cheald]
    * Add ruby 1.8.7 specific gem files to use specific version of i18n <poineau@nationbuilder.com>
    * Fixing failing tests for rails 4 <poineau@nationbuilder.com>
    * Upgrade to rspec 3.x [smtlaissezfaire, sgnn7]

--------------------------------------

0.13.1 - 2014-11-18

  Enhancements:

    * Add counter caching [smtlaissezfaire]

        belongs_to :user, :counter_cache => true
        belongs_to :user, :counter_cache => :custom_posts_count

    * Add Symbol type [miyucy]
    * Add the ability to easily query collection stats:  [sgnn7]

      MyModel.stats.snake_cased_field

  Bug Fixes:

    * Proxy#send should work with blocks and procs [mgroeneman]
    * Support inheriting OneAssociation. [DimaSamodurov]
    * write_attribute should return a type casted value [smtlaissezfaire]
    * Fix remove_validations_for for AS 4.1 [cpmurphy]
    * Fix autosupport loading issue (See rails issue 14664), and add test for ruby 2.1.1 [leifcr]
    * Fix syntax error in rescue response declarations for rails < 3.2 was causing MongoMapper::DocumentNotFound exceptions to cause an exception in WebBrick's exception handling in development. [bsoule]

  Internals:

    * Lock rest-client to 1.6.7 to ensure installation on 1.8.7
    * Added error message: can't mass assign protected attribute. This should be deprecated for proper protected_attributes support down the road.  [ThomasAlxDmy]
    * Add a spec to check for extra whitespace in files [rthbound]
