@@ -17,6 +17,6 @@ Gem::Specification.new do |s|
 
   s.add_dependency 'activemodel',   ">= 3.0.0"
   s.add_dependency 'activesupport', '>= 3.0'
-  s.add_dependency 'plucky',        '~> 0.6.5'
+  s.add_dependency 'plucky',        '~> 0.7.0'
   s.add_dependency 'mongo',         '~> 1.8'
 end
